# Git-Wiz

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  generator.rs  git.rs  main.rs  release.rs  setup.rs  ui.rs
src/tui/: app.rs  input.rs  mod.rs  runtime.rs  tasks.rs  view.rs
