[package]
name = "git-wiz"
version = "0.2.1"
edition = "2021"
description = "A rational AI pair programmer that generates conventional commit messages."
license = "MIT"
repository = "https://github.com/AyoubAchour/Git-Wiz"
keywords = ["git", "ai", "cli", "commit", "llm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
cliclack = "0.3.8"
